# MockMCP

./: .env  .gitignore  README.md  pyproject.toml
.specstory/history/: 2025-04-19_14-39-analyze-and-modify-test1-in-types-py.md  2025-04-20_04-03-简化server实例通信的mockmcp类.md
docs/: docs.md
mockmcp/: __init__.py  mock_fastmcp.py  mock_mcp.py
tests/: example1.py  example2.py  test_mock_fastmcp.py  test_mock_mcp.py
tests/exist_mcp/: fastmcp1.py  mcp1.py  mcp2.py  mcp3.py  ppt_fastmcp.py
