[project]
name = "mockmcp"
version = "0.1.0"
description = ""
authors = [
    {name = "beihai chen",email = "15393073+beihai-chen@user.noreply.gitee.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "mcp (>=1.6.0,<2.0.0)",
    "fastmcp (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
e2b-code-interpreter = "^1.2.1"
python-pptx = "^1.0.2"
requests = "^2.32.3"

